--- a/app/page.module.css
+++ b/app/page.module.css
@@ -106,4 +106,9 @@
     .footerCopy {
         margin-bottom: 15px;
     }
+
+    .aula {
+        margin-left: 0!important;
+        margin-right: 0!important;
+    }
 }
